--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <div id ="allTheNumbers"></div>
     <div id ="feelings"></div>
  <!--- <script src="main.js"></script> -->
- <script src="functions.js"></script>   
+ <script src="challenge.js"></script>   
 </body>
 </html>
